# Sistem-Persamaan-Linear

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/sistem_persamaan_linear/: gui.py  methods.py  utils.py
